--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-1 fixed-top">
       <div class="container-xl">
         <!-- Logo Ricomida -->
-        <a class="navbar-brand py-0" href="#top">Ricomida</a>
+        <a class="navbar-brand py-0 lobster" href="#top">Ricomida</a>
         <!-- Menú desplegable -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
   </header>
 
   <!-- ::::: SECCIÓN HERO pantallas grandes ::::: -->
-  <section class="hero position-relative overflow-hidden p-3 pt-md-5 mt-md-3 d-none d-sm-block">
+  <section class="hero position-relative overflow-hidden p-3 pt-md-5 mt-md-3 d-none d-lg-block d-sm-block d-md-block d-xl-block">
     <div class="container-xl">
       <div class="row mt-5">
         <div class="col-md-6">
@@ -79,7 +79,7 @@
   </section>
 
   <!-- ::::: SECCIÓN HERO pantallas pequeñas  ::::: -->
-  <section class="hero position-relative overflow-hidden pt-5 mt-5 pt-md-5 mt-md-3 d-xl-none d-lg-none d-md-none d-sm-block">
+  <section class="hero position-relative  border-bottom border-dark overflow-hidden pt-5 mt-5 mt-md-3 d-block d-sm-none d-xs-none">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
@@ -103,7 +103,7 @@
   </section>
 
   <!-- ::::: CAROUSEL ::::: -->
-  <div class="container border-bottom border-dark pb-5 d-none d-sm-block mt-2">
+  <div class="container border-bottom border-dark pb-5 d-none d-md-block d-sm-none d-xs-none">
     <div class="row blog pb-3">
       <div class="col-md-12">
         <div id="blogCarousel" class="carousel slide" data-ride="carousel">
